@@ -2,9 +2,33 @@
     height: 100vh;
 }
 
-.event-popup .leaflet-popup-content-wrapper {
-    background: #ffe066;
-    color: #333;
-    font-weight: bold;
-    border: 2px solid #f59e42;
+.event-log-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 150px;
+    background: rgba(255, 255, 255, 0.9);
+    border-top: 2px solid #f59e42;
+    z-index: 1000;
+    padding: 10px;
+    box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+}
+
+.event-log {
+    height: 100%;
+    overflow-y: auto;
+    font-family: monospace;
+    font-size: 14px;
+    line-height: 1.4;
+}
+
+.event-log-entry {
+    margin: 2px 0;
+    padding: 2px 5px;
+    border-bottom: 1px solid #eee;
+}
+
+.event-log-entry:hover {
+    background: #f5f5f5;
 }
