@@ -46,6 +46,9 @@
 </head>
 <body>
     <div id="map"></div>
+    <div class="event-log-container">
+        <div class="event-log" id="eventLog"></div>
+    </div>
 
     <!-- Main JS -->
     <script src="js/map.js"></script>
